# blueprint_dev_v2

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  configure.py  env-variables.txt  pyproject.toml  requirements.txt  requirements_dev.txt
deployments/full/: .env  deployment.yaml
deployments/production/: .env
docs/: __notes.txt  conf.py  index.md  index.rst  introduction.md  introduction.rst  quickstart.md  quickstart.rst
docs/_build/doctrees/: blueprints-database.doctree  blueprints-dataprocessing.doctree  blueprints-ml-consuming.doctree  blueprints-ml-serving.doctree  blueprints-ml-training.doctree  blueprints.doctree  code-documentation.doctree  custom_genindex.doctree  environment.pickle  index.doctree  introduction.doctree  quickstart.doctree
docs/_build/html/: .buildinfo  custom_genindex.html  genindex.html  index.html  introduction.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/blueprints/: _blueprints-ml-consuming.rst  _blueprints-ml-serving.rst  _blueprints-ml-training.rst  _blueprints.rst  blueprints-database.md  blueprints-dataprocessing.md  blueprints-ml-consuming.md  blueprints-ml-serving.md  blueprints-ml-training.md  blueprints.md
docs/code-docs/: _code-documentation.rst  _data-processing-utils-data-cleaning.rst  code-documentation.md
docs/notebooks/: tutorial.ipynb
src/blueprint_dev_v2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/blueprint_dev_v2/data_processing_utils/: data_cleaning.py  data_tranformers.py
src/blueprint_dev_v2/ml_lifecycle_utils/: ml_lifecycle_broker_facade.py  ml_lifecycle_error_handling.py  ml_lifecycle_subjects_name.py
src/blueprint_dev_v2_services/data_processing/: data_processing_service.py
src/blueprint_dev_v2_services/database_maria/: database_maria_service.py
(+100 files in other folders)
