# ATTENTION: Parts of this file are managed automatically!
# This refers to build-system, project.version, tool and nuitka.


[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "blueprint_dev_v2"
version = "0.0.1"           # will be changed automatically
authors = [{name = "qwerty" },]
description = ""
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "fastiot>=1.0,<2",
    "pip-tools>=6.4,<7",
    "torch>=2.0,<3",
    "pandas",
    "numpy",
    "mlflow",
    "wandb",
    "tensorflow",
    "keras",
    "scikit-learn",
    "rich",
    "pymongo",
    "PyMySQL",
]

# will be changed automatically
[project.optional-dependencies]
dev = [
    "furo",
    "sphinx",
    "myst-parser",
    "nbsphinx",
    "sphinx-copybutton",
    "pip-tools"
]

# will be changed automatically
[tool.setuptools.packages.find]
where = ["src"]
include = ["blueprint_dev_v2"]
exclude = ["blueprint_dev_v2_tests", "blueprint_dev_v2_services"]